--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <label>Gmail</label>
     <input placeholder="Personal"><br><br>
     <label>Feedback</label>
-    <textarea placeholder="About Out Service"></textarea><br><br>
+    <textarea placeholder="About Our Service"></textarea><br><br>
 </div>
    </form>
    <div class="button">
